[tool.poetry]
name = "torch-loan-default"
version = "0.1.0"
description = ""
authors = ["Matthew Tondreau <mmtondreau@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_loan_default"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"
tensorboard = "^2.14.0"
captum = {git = "https://github.com/pytorch/captum.git"}
pandas = "^2.1.1"
tqdm = "^4.66.1"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
torchmetrics = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
